--- a/Web/CookIt.Web/Areas/Administration/Views/Recipes/CreateRecipe.cshtml
+++ b/Web/CookIt.Web/Areas/Administration/Views/Recipes/CreateRecipe.cshtml
@@ -27,49 +27,60 @@
         <span asp-validation-for="InputModel.RecipeInstructions" class="text-danger"></span>
 
         <div class="text-md-left ml-1">
-            <label asp-for="InputModel.Image" class="text-primary h5">Recipe Picture</label>
+            <label asp-for="InputModel.Image" class="text-primary h5">Picture</label>
         </div>
-        <input type="file" class="form-control mb-4" placeholder="Image..." asp-for="InputModel.Image">
-        <span asp-validation-for="InputModel.Image" class="text-danger"></span>
+        <div class="row ml-0">
+            <span asp-validation-for="InputModel.Image" class="text-danger w-25"></span>
+            <span asp-validation-for="InputModel.Price" class="text-danger w-50 col align-self-end mr-3 ml-4"></span>
+        </div>
+        <div class="row ml-0">
+
+            <input type="file" class="form-control-file w-25 mt-2 mb-4 border rounded" placeholder="Image..." asp-for="InputModel.Image">
+            <div class="input-group w-50 col align-self-end mr-3 ml-4 mb-4">
+                <span class="input-group-addon"><i class="fa fa-euro mt-1"></i></span>
+                <input type="number" step="0.01" class="form-control" placeholder="Price" asp-for="InputModel.Price">
+            </div>
+        </div>
 
         <label class="text-primary h5"> Choose required ingredients: </label>
-        
-            <div id="errorMessage" class="alert alert-danger" role="alert">
-                The number of ingredients must be at least 1 and no more than 10.
-            </div>
-        
-            <div id="ingredientsContainer">
-                <div asp-validation-summary="ModelOnly" class="text-danger pb-1"></div>
-                <span id="validationIngredientsSelect" asp-validation-for="InputModel.Ingredients[0].IngredientId" class="text-danger"></span>
-                <span id="validationIngredientsCount" asp-validation-for="InputModel.Ingredients[0].Count" class="text-danger"></span>
-                <span id="validationIngredientsWeight" asp-validation-for="InputModel.Ingredients[0].Weight" class="text-danger"></span>
-                @for (int i = 0; i < numberOfIgredients; i++)
-                {
-            <div id="ingredientRow" class="row ml-0">
-                <select id="ingredientsSelect" type="text" class="form-control w-25 col align-self-start" asp-for="InputModel.Ingredients[i].IngredientId">
-                    <option selected disabled value="0">--- Select Ingredient Type ---</option>
-                    @for (int j = 0; j < Model.Ingredients.Count; j++)
-                    {
-                        <option value="@Model.Ingredients[j].Id">@Model.Ingredients[j].Name</option>
-                    }
-                </select>
-                @*<span id="validationIngredientsSelect" asp-validation-for="InputModel.Ingredients[i].IngredientId" class="text-danger"></span>*@
-                @{
+
+        <div id="errorMessage" class="alert alert-danger" role="alert">
+            The number of ingredients must be at least 1 and no more than 10.
+        </div>
+
+        <div id="ingredientsContainer">
+            <div asp-validation-summary="ModelOnly" class="text-danger pb-1"></div>
+
+            @for (int i = 0; i < numberOfIgredients; i++)
+            {
+                <span id="validationIngredientsSelect" asp-validation-for="InputModel.Ingredients[i].IngredientId" class="text-danger"></span>
+                <span id="validationIngredientsCount" asp-validation-for="InputModel.Ingredients[i].Count" class="text-danger"></span>
+                <span id="validationIngredientsWeight" asp-validation-for="InputModel.Ingredients[i].Weight" class="text-danger"></span>
+                <div id="ingredientRow" class="row ml-0">
+                    <select id="ingredientsSelect" type="text" class="form-control w-25 col align-self-start" asp-for="InputModel.Ingredients[i].IngredientId">
+                        <option selected disabled value="0">--- Select Ingredient Type ---</option>
+                        @for (int j = 0; j < Model.Ingredients.Count; j++)
+                        {
+                            <option value="@Model.Ingredients[j].Id">@Model.Ingredients[j].Name</option>
+                        }
+                    </select>
+                    @*<span id="validationIngredientsSelect" asp-validation-for="InputModel.Ingredients[i].IngredientId" class="text-danger"></span>*@
+                    @{
                         string ingredientsCountId = $"ingredientsCount{i}";
-                    <input id="@ingredientsCountId" class="form-control mb-4 w-25 col align-self-center ml-4" placeholder="Count" asp-for="InputModel.Ingredients[i].Count">
-                    @*<span id="validationIngredientsCount" asp-validation-for="InputModel.Ingredients[i].Count" class="text-danger"></span>*@
+                        <input id="@ingredientsCountId" class="form-control mb-4 w-25 col align-self-center ml-4" placeholder="Count" asp-for="InputModel.Ingredients[i].Count">
+                        @*<span id="validationIngredientsCount" asp-validation-for="InputModel.Ingredients[i].Count" class="text-danger"></span>*@
 
 
-                    string ingredientsWeightId = $"ingredientsWeight{i}";
-                    <input id="@ingredientsWeightId" type="number" class="form-control mb-4 w-25 col align-self-end ml-4 mr-3" placeholder="Weight (grams)" asp-for="InputModel.Ingredients[i].Weight">
-                }
-                @*<span id="validationIngredientsWeight" asp-validation-for="InputModel.Ingredients[i].Weight" class="text-danger"></span>*@
+                        string ingredientsWeightId = $"ingredientsWeight{i}";
+                        <input id="@ingredientsWeightId" type="number" class="form-control mb-4 w-25 col align-self-end ml-4 mr-3" placeholder="Weight (grams)" asp-for="InputModel.Ingredients[i].Weight">
+                    }
+                    @*<span id="validationIngredientsWeight" asp-validation-for="InputModel.Ingredients[i].Weight" class="text-danger"></span>*@
 
-            </div>
-                }
+                </div>
+            }
 
 
-            </div>
+        </div>
         <div class="row d-flex justify-content-end mr-4">
             <button id="addIngredient" class="btn btn-primary icon-plus"></button>
             <button id="removeIngredient" class="btn btn-danger icon-minus ml-4"></button>
