--- a/Web/CookIt.Web/Areas/Administration/Views/Orders/Active.cshtml
+++ b/Web/CookIt.Web/Areas/Administration/Views/Orders/Active.cshtml
@@ -5,14 +5,14 @@
 @model IPagedList<CookIt.Web.ViewModels.Order.OrderAllViewModel>
 
 @{ 
-    ViewData["Title"] = "All Orders";
+    ViewData["Title"] = "Active Orders";
 }
 
 @if (Model.Count == 0)
 {
     <div class="col-md-12 pt-2">
         <div class="alert alert-dark" role="alert">
-            There are no orders.
+            There are no active orders.
         </div>
     </div>
 }
@@ -40,7 +40,7 @@ else
                         <tr>
                             <th scope="row">@((i + 1) + ((Model.PageNumber - 1) * Model.PageSize))</th>
                             <td>@Model[i].IssuedOn.ToString("D")</td>
-                            <td>@Model[i].OrderStatusName</td>
+                            <td class="text-success"><b>@Model[i].OrderStatusName</b></td>
                             <td>@Model[i].FullNameIssuer</td>
                             <td>@Model[i].DeliveryDate.ToString("D")</td>
                             <td class="text-center">
@@ -53,7 +53,7 @@ else
         </div>
     </div>
     <div class="d-flex justify-content-center mt-4">
-        @Html.PagedListPager((IPagedList)Model, page => Url.Action("Pending",
+        @Html.PagedListPager((IPagedList)Model, page => Url.Action("Active",
                                                                         new
                                                                         {
                                                                             p = page
