--- a/Web/CookIt.Web/Areas/Administration/Views/Shared/_Layout.cshtml
+++ b/Web/CookIt.Web/Areas/Administration/Views/Shared/_Layout.cshtml
@@ -31,8 +31,9 @@
             <li>
                 <div class="link"><i class="fa fa-shopping-cart"></i>Orders<i class="fa fa-chevron-down"></i></div>
                 <ul class="submenu">
-                    <li><a href="/Administration/Orders/AllOrders">All Orders</a></li>
                     <li><a href="/Administration/Orders/Pending">Pending Orders</a></li>
+                    <li><a href="/Administration/Orders/Active">Active Orders</a></li>
+                    <li><a href="/Administration/Orders/Finished">Finished Orders</a></li>
                 </ul>
             </li>
         </ul>
